// Copyright 2022 Google LLC
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//      http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.
// =============================================================================
syntax = "proto3";

package tensorflow.data_validation;

option go_api_flag = "OPEN_TO_OPAQUE_HYBRID";

message FeatureSkewDetectorConfig {
  // Names of the features that are to be used as identifiers.
  repeated string identifier_features = 1;

  // Size of the sample of training-serving example pairs which exhibit skew
  // to include in the skew results.
  uint32 skew_sample_size = 2;

  // Names of features for which no skew detection is done.
  repeated string ignore_features = 3;

  // Number of digits of precision after the decimal point to which to round
  // float values before detecting skew.
  uint32 float_round_ndigits = 4;

  // If set, skew detection will be done on examples for which there are
  // duplicate identifier feature values. In this case, the counts in the
  // FeatureSkew result are based on each training-serving example pair
  // analyzed.
  // If not set, the feature skew detector will skip examples with duplicate
  // identifier feature values.
  // Examples with a given identifier feature values must all fit in memory.
  bool allow_duplicate_identifiers = 5;
}
